--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,9 @@ body {
 html {
   @apply h-full;
 }
+
+@supports (font: -apple-system-body) and (-webkit-appearance: none) {
+  img[loading="lazy"] {
+    clip-path: inset(0.6px);
+  }
+}
